# bulgur-cloud

./: .codecov.yml  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Readme.md  SECURITY.md  benchmark.sh  bump-version.sh  make-release-branch.sh  make-release.sh
.cargo/: audit.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: audit.yml  coverage.yml  e2e.yml  lint.yml  release.yml
.packaging/: bulgur-cloud-CI.public.asc
Docker/: Dockerfile
atomic-rename/: Cargo.toml  LICENSE.txt  Readme.md
atomic-rename/src/: lib.rs  other.rs  unix.rs  windows.rs
backend/: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  tailwind.config.js
backend/assets/: style.css
backend/src/: auth.rs  auth_middleware.rs  cli.rs  db.rs  error.rs  folder.rs  lib.rs  main.rs  pages.rs  ratelimit_middleware.rs  server.rs  share.rs  state.rs  static_files.rs  storage.rs
backend/src/entity/: mod.rs  path_token.rs  prelude.rs  sharing.rs  token.rs  user.rs  user_token.rs
backend/templates/: base.html  folder-list.html  login.html
backend/tests/: cli.rs  pages.rs  storage.rs
backend/tests/common/: mod.rs
bulgur-cloud-backend/: .gitignore  Cargo.toml  build.rs
bulgur-cloud-backend/assets/: style.css
bulgur-cloud-backend/src/: app.rs  auth.rs  auth_middleware.rs  cli.rs  error.rs  folder.rs  lib.rs  main.rs  meta.rs  pages.rs  server.rs  state.rs  static_files.rs  storage.rs
bulgur-cloud-backend/src/kv/: kv.rs  kv_filesystem.rs  mod.rs  table.rs
bulgur-cloud-backend/templates/: base.html  core.html  error.html  folder-list.html  not-found.html
bulgur-cloud-backend/tests/: auth.rs  cli.rs  meta.rs  pages.rs  storage.rs
bulgur-cloud-backend/tests/common/: mod.rs
bulgur-cloud-frontend/: .eslintignore  .eslintrc.js  .gitignore  Cargo.toml  api.d.ts  app.json  generate_types.rs  package-lock.json  package.json  playwright.config.ts
bulgur-cloud-frontend/scripts/: build-run.js
bulgur-cloud-frontend/src/: App.tsx  BLink.tsx  BulkDeleteModal.tsx  Dashboard.tsx  ErrorDisplay.tsx  FillSpacer.tsx  Loading.tsx  Login.tsx  NotFound.tsx  SelectionPanel.tsx  Upload.tsx  UploadProgress.tsx  api.d.ts  client.ts  error.ts  fetch.ts  persist.ts  routes.ts  store.ts  typeUtils.ts  utils.ts
bulgur-cloud-frontend/src/client/: auth.ts  base.ts  createFolder.ts  deletePath.ts  loadFolder.ts  login.ts  logout.ts  meta.ts  pathExists.ts  pathToken.ts  rename.ts  request.ts  storage.ts  tokenCheck.ts  upload.ts
bulgur-cloud-frontend/src/components/: Banner.tsx  FilenameModal.tsx  RightClickable.tsx  SidePanel.tsx
bulgur-cloud-frontend/src/storage/: DeleteConfirmModal.tsx  DeleteModal.tsx  File.tsx  FolderList.tsx  FolderListEntry.tsx  RenameModal.tsx
bulgur-cloud-frontend/tests/: create-folder.spec.ts  login.spec.ts
bulgur-cloud-frontend/web/: index.html
bulgur-cloud-frontend/web-build/: .gitignore
docs/: .gitignore  dendron.code-workspace  dendron.yml
docs/vault/: admin.banner.md  admin.cors.md  admin.md  api.auth.md  api.md  api.meta.md  api.storage.md  design.md  dev.client.md  dev.release.md  root.md  security.md  security.schema.yml  telemetry.md  template.security.md
frontend/: .eslintrc.js  .gitignore  Cargo.toml  README.md  generate_types.rs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
frontend/playwright-report/: index.html
frontend/public/: theme-setter.js
frontend/scripts/: build-run.js
frontend/src/client/: auth.ts  base.ts  meta.ts  request.ts  storage.ts
frontend/src/components/: Banner.tsx  Dropdown.tsx  ErrorView.tsx  LabelledInput.tsx  Portal.tsx  Slideout.tsx  Spinner.tsx
frontend/src/fragments/: ErrorDisplay.tsx  Navbar.tsx
frontend/src/fragments/s/: CurrentPathProvider.tsx  FilePreview.tsx  FolderList.tsx  ListingIcon.tsx  NewFolderButton.tsx  NotFound.tsx  PathBreadcrumbs.tsx  UploadButton.tsx  UploadDropzone.tsx
frontend/src/fragments/s/ActionModal/: BaseFilenameModal.tsx  DeleteModal.tsx  ModalSelector.tsx  NewFolderModal.tsx  RenameModal.tsx
frontend/src/fragments/s/Slideouts/: Selection.tsx  UploadProgress.tsx
frontend/src/fragments/settings/: ThemePicker.tsx
frontend/src/hooks/: api.d.ts  auth.ts  base.ts  local-storage.ts  storage.ts
frontend/src/pages/: _app.tsx  _document.tsx  index.tsx  login.tsx  settings.tsx
frontend/src/pages/s/: [[...slug]].tsx
frontend/src/utils/: clsx.ts  error.ts  filename.ts  human.ts  object.ts  persist.ts  store.ts  type.ts  url.ts  window.ts
frontend/src/utils/hooks/: useDisclosure.ts
frontend/test-data/: testing_auth_state.json
frontend/tests/: common.ts  create-folder.spec.ts  global-setup.ts  login.spec.ts
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_init.rs  m20231101_042735_sharing.rs
simple-secrecy/: Cargo.toml  LICENSE.txt  Readme.md
simple-secrecy/src/: lib.rs
