[package]
name = "bulgur-cloud"
description = "Simple and delicious cloud storage and sharing."
version = "0.4.1"
edition = "2021"
license = "AGPL-3.0-only"
default-run = "bulgur-cloud"

[features]
default = ["telemetry_opentelemetry", "kv_filesystem"]
## KV backends
# filesystem
kv_filesystem = []
# OpenTelemtry support
telemetry_opentelemetry = [
  "opentelemetry",
  "opentelemetry-otlp",
  "tonic",
  "tracing-opentelemetry",
]
# Enabled only to generate types for the frontend
generate_types = []

[dependencies]
# Server
actix-web = "4.4"
actix-cors = "0.6"
actix-service = "2.0"
actix-files = "0.6"
actix-multipart = "0.6"
qstring = "0.7"
futures = "0.3"
tokio = { version = "1.32", features = ["full"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
async-trait = "0.1"
# Rate limiting
governor = { version = "0.6", default-features = false, features = [
  "std",
  "dashmap",
] }
# Verifying file names
sanitize-filename = "0.5"
pathdiff = "0.2"
# Atomic rename for overwrite-free uploads
atomic-rename = { path = "../atomic-rename" }
# Template rendering for static pages
askama = "0.12"
askama_actix = "0.14"
# Include asset files
actix-web-rust-embed-responder = { version = "2.2.2", default-features = false, features = [
  "support-rust-embed-for-web",
] }
rust-embed-for-web = "11.1"
# Auth
nanoid = "0.4"
derive_more = "0.99"
simple-secrecy = { path = "../simple-secrecy" }
# Data serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
# Decode url-encoded URLs
urlencoding = "2.1"
# Logging
tracing = "0.1"
tracing-unwrap = { version = "0.10", default-features = false }
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-bunyan-formatter = "0.3"
# Password hashing
scrypt = { version = "0.11" }
# For use as a CLI tool
clap = { version = "3.2", features = ["wrap_help", "derive"] }
num_cpus = "1.16"
rpassword = "7.2"
# Error management
thiserror = "1.0"
anyhow = "1.0"
# Middleware for simple pages that allows changing HTTP method using a query parameter
actix-web-query-method-middleware = "1.0"
# Data storage
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls"] }

# Can we limit this to only if `generate_types` is set?
typescript-type-def = "0.5"

# Tracing (optional, enabled with `telemetry_opentelemetry` option)
opentelemetry = { version = "0.17", features = [
  "rt-tokio",
  "metrics",
], optional = true }
opentelemetry-otlp = { version = "0.10", features = [
  "tonic",
  "tls",
  "tls-roots",
], optional = true }
tonic = { version = "0.6.2", optional = true }
tracing-opentelemetry = { version = "0.17", optional = true }
