[package]
name = "bulgur-cloud-frontend"
description = "Simple and delicious cloud storage and sharing."
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
typescript-type-def = "0.4.0"
bulgur-cloud = { path = "../bulgur-cloud-backend", features = ["generate_types"] }

[[bin]]
name = "generate_types"
path = "generate_types.rs"
