[package]
name = "bulgur-cloud-frontend"
description = "Simple and delicious cloud storage and sharing."
version = "0.2.1"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
typescript-type-def = "0.5.1"
bulgur-cloud = { path = "../bulgur-cloud-backend", features = [
  "generate_types",
] }

[[bin]]
name = "generate_types"
path = "generate_types.rs"
